[project]
name = "PineTick"
version = "0.0.7"
description = "Placeholder package to reserve the name"
authors = [
    {name = "LucasYang",email = "lucas.yang.email@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)"
]


[project.urls]
"Source code" = "https://github.com/LucasYangCoding/pine-tick"
"Changelog" = "https://github.com/LucasYangCoding/pine-tick/blob/main/CHANGELOG.md"
"Documentation" = "https://github.com/LucasYangCoding/pine-tick/blob/main/DOCS.md"


[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
